# WhiteJack

./: .gitignore  CMakeLists.txt  README.md
src/cheats/: ICheat.h  Peek.cpp  Peek.h  PeekHoleCard.cpp  PeekHoleCard.h  Swap.cpp  Swap.h
src/core/: Constants.h  Game.cpp  Game.h  IGameState.cpp  IGameState.h  Utils.cpp  Utils.h  main.cpp
src/game/: Card.cpp  Card.h  Client.cpp  Client.h  Deck.cpp  Deck.h  Hand.cpp  Hand.h  Player.cpp  Player.h
src/managers/: ResourceManager.cpp  ResourceManager.h  UIManager.cpp  UIManager.h
src/states/: StateGameOver.cpp  StateGameOver.h  StateGameplay.cpp  StateGameplay.h  StateGuide.cpp  StateGuide.h  StateMainMenu.h
